src/objects/Approval_History__c.object
<CustomObject>
    <description>Collection of Pending and Approved Record in all objects</description>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Approval History</relationshipLabel>
        <relationshipName>Approval_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignTo_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssignTo Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_History_Original_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_URL__c</fullName>
        <label>Object URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approval History</relationshipLabel>
        <relationshipName>Approval_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Days__c</fullName>
        <formula>TODAY()-DATEVALUE(Request_Date__c)</formula>
        <label>Pending Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rebate</label>
        <referenceTo>eRebate__c</referenceTo>
        <relationshipName>Approval_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Approval Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Approval Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>if_Not_User__c</fullName>
        <label>if Not User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Approval History</label>
    <listViews>
        <fullName>Account</fullName>
        <columns>Approver__c</columns>
        <columns>Request_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account</label>
    </listViews>
    <listViews>
        <fullName>Agreement</fullName>
        <columns>Approver__c</columns>
        <columns>Request_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Agreement</value>
        </filters>
        <label>Agreement</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>Approver__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Pending_Days__c</columns>
        <columns>Object_URL__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Change_Request</fullName>
        <columns>Approver__c</columns>
        <columns>Request_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Change Request</value>
        </filters>
        <label>Change Request</label>
    </listViews>
    <listViews>
        <fullName>Model_N_User_Registration</fullName>
        <columns>Approver__c</columns>
        <columns>Request_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Model N User Registration</value>
        </filters>
        <label>Model N User Registration</label>
    </listViews>
    <listViews>
        <fullName>My_Training</fullName>
        <columns>Approver__c</columns>
        <columns>Request_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>My Training</value>
        </filters>
        <label>My Training</label>
    </listViews>
    <listViews>
        <fullName>New_User_Registration</fullName>
        <columns>Approver__c</columns>
        <columns>Request_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>New User Registration</value>
        </filters>
        <label>New User Registration</label>
    </listViews>
    <listViews>
        <fullName>Opportunity</fullName>
        <columns>Approver__c</columns>
        <columns>Request_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>Opportunity</label>
    </listViews>
    <listViews>
        <fullName>Parent_Account_Request</fullName>
        <columns>Approver__c</columns>
        <columns>Request_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Parent Account Request</value>
        </filters>
        <label>Parent Account Request</label>
    </listViews>
    <listViews>
        <fullName>Rebate</fullName>
        <columns>Approver__c</columns>
        <columns>Request_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Rebate</value>
        </filters>
        <label>Rebate</label>
    </listViews>
    <nameField>
        <displayFormat>AppHis-{000000}</displayFormat>
        <label>Record Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>